# WorstBackBreaker

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/common/: binary_io.hpp  number_generator.hpp
src/data_structures/: CMakeLists.txt  main.cpp
src/data_structures/graphs/: dag.hpp
src/machine_learning/neat/: CMakeLists.txt  activation.hpp  configuration.hpp  dag.hpp  genome.hpp  main.cpp  mutator.hpp  network.hpp  network_generator.hpp
src/thread_pool/: thread_pool.hpp
tests/: CMakeLists.txt
tests/data_structures/: CMakeLists.txt  dag_test.cpp
tests/neat/: CMakeLists.txt  network_test.cpp
tests/thread_pool/: CMakeLists.txt  thread_pool_test.cpp
tests/worst_common/: CMakeLists.txt  binary_io_test.cpp  number_generator_test.cpp
